@@ -22,14 +22,14 @@ DIST gitlab-ce-9.2.10.tar.gz 30988788 SHA256 a30e9d08d08433713df958d447a76cf2ed1
 DIST gitlab-ce-9.3.11.tar.gz 31768655 SHA256 0eaeb3a9daf3f1ea56ad7435b2d7fe3e15e92508fb497fa22031e028633bd84b SHA512 716bf467338eebb495397e8b244201ba1547d96bce91f6dd3d0ecf8f1cd94934e7b96d6bd469a387504fb319d00e2fdc8317ad298f2e0a7de30d10c165524ba8 WHIRLPOOL c1ca1b1845f35a54759fbd70d1a13edeb4b77322063cb19862bb3870c57b4fbc1ced29c5873b3521c5b50b7425e4a0ee5a917fe3d3f06c0de3557c801b1cfd29
 DIST gitlab-ce-9.4.0_rc6.tar.gz 32810524 SHA256 4cd8ae890bbe2b90047078c6d61fd29c8c62e8aa0059d97ca14db81b68ea64f2 SHA512 b8aeaa3f017b47c3455885c57fc21da8fc393ce6258de6813f0c7104f7dc725ffd3800c22d480ed19aa553c7d1040a4006dbd923cb6a1f3cdd685b17ee21afc0 WHIRLPOOL dd583d05f6937612e9a34980c558030bed266f2a0f50a2d9977c23a4cb8fcbfcfc71a3157c846250a02091688333c5b76ccdeec2a9f3e5a23af715caa7d58f05
 DIST gitlab-ce-9.4.6.tar.gz 32855962 SHA256 2bfe2595dc334438d27fc1ab1e94464f02577f36ff5f9c5e76f4247ec96a685d SHA512 4ccbd1988fc40ef8f12f4e2e2610724e9e799e6e2f31ca234dca2c1c0642a3f123f0c90590ba7b01deb761a1802be0e49a56b089067879193f5256c2c13f3909 WHIRLPOOL 2bc05cda6705de79264b323dc4b0f6cd1d49561637827a08de0b3f6ab35e8131f72ba05ddc2f7073c879236a248c469c831dd724482a33865bc80044c09ca917
-DIST gitlab-ce-9.5.3.tar.gz 36190930 SHA256 c04f7e0ee437ef72ab1ca156599a992adb396d8ca91ddb6702b7c93904be5ab0 SHA512 a45b246be1373dbcc9f556e4836ff53fd9fb3c46134e4668de1c6121c214b006da1a15d8e1e4fb4f90b7a235c6c849b0cbc8edf11920bfd43cde50feeda66faf WHIRLPOOL 2c88bbbf10adaed7c182d66e87d1d9c757f5ef99f7d8826d0e137f6b624069d950ce159af06ebd005ab964539120462143b9beb3e993a9f774cf0908d6c40e86
+DIST gitlab-ce-9.5.4.tar.gz 36194887 SHA256 5b6e8558e228df6f645a4b7bed6b3a51f73732e4f68818331b89c81bef055d91 SHA512 b90028217f835389db9e01f8d6466a69d5fe3b164239e306c8dbd97e49574c652fd88de15c4110ebcc2b3f93cfd89758cb8ec928bd1d16caf1dcbe3984d1f0f1 WHIRLPOOL 2999f4afab19eeac42b0f4f00db685e72e457122040ae8c0e91f48dfb389f1cdc03157278bb7ad29fe2e9b88e179b22e03d7d6328e10af534244167c716981d1
 EBUILD gitlab-ce-9.0.13.ebuild 13146 SHA256 64748b6e753c67ac3c46094a5bd021b13bca05d5dbf5955de6e0796ab8bb43fc SHA512 ba2ad250ef3c35d333d22ae25dd62c05fc53591438bf2f77a6d0ccc8993e53695d8458153bb6e80dcde4b092bc7523909b2d9e3949e640862a3455deaf647b1f WHIRLPOOL 78863ffbb92f592405227209a4980c05cf40e34be35a1198bdd3cba938fa34709ca0af850b4b4735f7aeb54dd3e35b1825233dd32afa2a964524bf7cc2035839
 EBUILD gitlab-ce-9.1.10.ebuild 13302 SHA256 3fc7a2a4e386e49362a4c9abec30799e0a794b9e1636b18b57c988323acc86bc SHA512 de31e302e94df6dbf263aaf4afce12d3260dac06b22b3f48965e4e7687b3be8e831d06ce2d05581acf9c9305dc1b40842e5be0fed2dc7f7948e9836361f82e87 WHIRLPOOL a6599e4d5c77ae0c6f0a8ba71797a20e73747f1cc4d5a43d2b3939efb7dfd59b8c409b17c32ffc39e6c8cee976da77840309c6be4f51f84a3034812c6b481e99
 EBUILD gitlab-ce-9.2.10.ebuild 13047 SHA256 19f794001a59da5c2de341c2f4fa73f69cb11af3139ad1c908f7fedeffe7c5f9 SHA512 df7fe4662cf1c85758d8634b13b14211242115113c37f78bb7ad1196a40243a0420aca3d3548743043a9de8410db1b80192f75c492347928ae0a574ba2abc924 WHIRLPOOL 5f38b97cba750b57c3f9300c8b8a19fa20eb6e82d35e79431ec3f1b91dd16a578776d125962d94ad2d9d34e2a6142fcfe332d6322b60afc975e761bca85591cc
 EBUILD gitlab-ce-9.3.11.ebuild 13706 SHA256 cbaf37ceb4aa22bca196023e3282f66f858de095396eb1c377b8a1e4712ec819 SHA512 7cddcf0b91957ddf6b9bc027140c59b4cd3fb767330fe60cbfb3b186b90f4c74f15a1221c96b06391d2ddd05d98e4809d32937d209c75b3c65a3e9d1cf326b28 WHIRLPOOL 99aaf5a58c51124fd979d710da7205bfe4d34f6b24a24628042697e1f3e0c1c0fdd73b4b855c206461c46b3ecf9c7baa98f69ec9eb3181f1bdbb28f14b3e5478
 EBUILD gitlab-ce-9.4.0_rc6.ebuild 13515 SHA256 55d3f521d4b54ae3a8e1730e603cc3699a957bb037d7bb402984c27b68e3ba50 SHA512 b47acf7328fc7396bf4e33b5e5fd147e20a5b4d0ea115518ad3492cac3e8d65e861e3ab961e73779d0bee82a5c08ca04a355e4c547c4504d5881d81f182ba6e4 WHIRLPOOL 47547b6d7368a086aa474cad44a304936a06615406c9c72d899677c2742596a991d9b2e4cb4f7a65a1011db2966b7f21ff0901004e00e4f96cbae8b28018e3bb
 EBUILD gitlab-ce-9.4.6.ebuild 13533 SHA256 2cf84d7c1638e0083a34a18e259a4f03e3c56007cdcd0f1184e7cfa186eed47b SHA512 6f7346319677838db6e539622c1123781e9b65cad2bfc964801fc9235f6738a58e04bbd3a3b7fb088704e508b5304802bcd1f940ed535b683d78a7ffbc740701 WHIRLPOOL 829021ef040afef15b8c7d961e337817b040d13e7ab3672f8cadeabbf55e795dfa19d5ff90b2a010b5f9bf492f4491fd2dcb6c3dead4920290b1e30448270e70
-EBUILD gitlab-ce-9.5.3.ebuild 13533 SHA256 13cce9472011e86028cfca5e50414188eea7c54b729d29fbde486e0e8d5e3c91 SHA512 632f58d3518ac0a5b6ffafab9e945f3b92d5d1eaf9f73ca153c0ccb9c521cbab311cff4b2494d9cc4de6eb66e6e1d81af0df3e9cc6761654deaa6c1bea4f5f6e WHIRLPOOL b967fa1f66ea8ceef62c11d17685dee79a694a1d8b556216d41fa0b5eb118dd3acb1edff030cddf6abd46864f82224ea10557a537a314832f0147995b83c4fcb
+EBUILD gitlab-ce-9.5.4.ebuild 13533 SHA256 f39f64a0396a581772df098eb27f72a34b09608afb960688d8fce71a6f2722b2 SHA512 3e7023b79b891fc83b36e10fcb497bc0402a1a7c89952ed2ecfee83f4e204ebd01d9899166d4450cf17529f96728bb15057ae63a6419f00981a8d252b5e10391 WHIRLPOOL 424b62cfc439e1039d87d26d030a5e11ac78a60a1be59404354f2386a831afae1971f736777e56127e43c81c3597d08edd62ecac2dfbd01c1d0f6e747fe2c9e2
 EBUILD gitlab-ce-9999.ebuild 13475 SHA256 ae6496c7a3fd61c484fed4822631005348ab5d9c05df61ef927ae797753e83c6 SHA512 79f6b2457187f95a52cddcd67643c9b6d4ca72a4f4e52f34849786ff8ac9be32b771504f6cdd7dbaf5de5f77869db75812ff4ea3aeaf2abbdc874e755b627d99 WHIRLPOOL 2fbd6ea7b1013128416c511f2d4eb4f08e087046a8c3dfe60c5b3d5b7ac521d86ab33dba9a62e5bd10b4f5ef0e1d9d3a8cac43a189dca018c6ddb734806d8a76
-MISC ChangeLog 23583 SHA256 5ecfe91223571317d873dc8a077d662ee8f9aeabb60b7cca93642daf4aaa5a38 SHA512 b5061e7a2326b01a4c6c55c5f4cadf4b8d8281248aff89b50a6d18768a1c436295bba1bdcbdb67c11e67fe3018aa29e1ef4e46430d0537a97413ca4eb8078ef2 WHIRLPOOL 214bc3831448589f492eae51496427d7f9c29af602a4beb5a685e28ecd2611d1c63ee5c6360a9daef2618f5ca8db3279a114ca5e5b32790b50e16bdec26b87c9
+MISC ChangeLog 23786 SHA256 4773ab2d4c7807a5f6a94ece93a64a3a23d6c49c1b6e4570346fce4049b8ec89 SHA512 2e0cf1dbe4af95e77f0e19ca06668d5764dd936ded703d26e2ae3e3a9baba06452f41fedc25c60e7328d12251112423dbf8fce8dc30e2c4302c97b37c7f7859c WHIRLPOOL 4dd3620775f9b5d40fbdc2fba40ae15a9f37088909574be366fd65b5457609784a381f91762ebd51f0f596d7590b7ae3d6312ebf55af9d293aa6e7a277cc3d04
 MISC metadata.xml 801 SHA256 3dc7486a12903f47f65968d524c93500ba30a4a09fa57e5a9dacf356509b44bb SHA512 e132754b72e64246531fa883400a0cf1a473ac5a6a49623db58ccf118a038b7cf37df03d9550f37b4a25f9ddbb1dcc5652ec9a4f2259d8e3ce202692c4025f41 WHIRLPOOL e9d961681fd790008eaf80fa07ce2c55a00a58f2e920d759793783ca8c8f508602a777e94c0cb65fe87c7dbef0cabdf26e4f4082584421097d939cbab20c4ac6
