@@ -1,3 +1,9 @@
+*gitlab-ce-9.5.4 (08 Sep 2017)
+
+  08 Sep 2017; Manuel Friedli <manuel@fritteli.ch> +gitlab-ce-9.5.4.ebuild,
+  -gitlab-ce-9.5.3.ebuild:
+  www-apps/gitlab-ce:  Update 9.5: 9.5.3 => 9.5.4: Security fixes.
+
 *gitlab-ce-9.4.6 (08 Sep 2017)
 
   08 Sep 2017; Manuel Friedli <manuel@fritteli.ch> +gitlab-ce-9.4.6.ebuild,
